// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendScreen renders correctly - button should show Copied in title 1`] = `
"<View style={{...}}>
  <withTheme(AccountAddressComponent) account={{...}} token={{...}} />
  <View style={{...}}>
    <View style={{...}}>
      <View style={{...}}>
        <QRCode value=\\"value\\" size={600} />
      </View>
    </View>
    <View style={{...}}>
      <withTheme(TextComponent) style={{...}}>
        value
      </withTheme(TextComponent)>
    </View>
  </View>
  <withTheme(ButtonComponent) testID=\\"copy-clipboard\\" style={{...}} onPress={[Function: onPress]}>
    Copied
  </withTheme(ButtonComponent)>
</View>"
`;

exports[`SendScreen renders correctly 1`] = `
"<View style={{...}}>
  <withTheme(AccountAddressComponent) account={{...}} token={{...}} />
  <View style={{...}}>
    <View style={{...}}>
      <View style={{...}}>
        <QRCode value=\\"value\\" size={600} />
      </View>
    </View>
    <View style={{...}}>
      <withTheme(TextComponent) style={{...}}>
        value
      </withTheme(TextComponent)>
    </View>
  </View>
  <withTheme(ButtonComponent) testID=\\"copy-clipboard\\" style={{...}} onPress={[Function: onPress]}>
    Copy to clipboard
  </withTheme(ButtonComponent)>
</View>"
`;
